Structure for portfolio web page in Github pages (index html - css file - js file)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Tu Nombre - Portafolio</title>
 </head>
 <body>
-    <h1> Test de estructura html para mi portafolio.</h1> 
+
+    <header>
+        <h1>Tu Nombre</h1>
+        <p>Desarrollador Web</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#learning">Learning</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="home">
+        <h2>Bienvenido a mi Portafolio</h2>
+        <p>¡Explora mi trabajo y experiencia!</p>
+    </section>
+
+    <section id="projects">
+        <h2>Proyectos</h2>
+        <!-- Aquí puedes agregar información sobre tus proyectos -->
+    </section>
+
+    <section id="learning">
+        <h2>Aprendizaje</h2>
+        <!-- Aquí puedes agregar información sobre tus áreas de aprendizaje -->
+    </section>
+
+    <section id="about">
+        <h2>Sobre Mí</h2>
+        <!-- Aquí puedes agregar información personal y profesional -->
+    </section>
+
+    <section id="contact">
+        <h2>Contacto</h2>
+        <!-- Aquí puedes agregar información de contacto -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Tu Nombre - Desarrollador Web</p>
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
